added core files

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "angular-mocks": "^1.4.9",
     "browser-sync": "^2.11.1",
     "chalk": "^1.1.1",
+    "colors": "^1.1.2",
     "coveralls": "^2.11.6",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
@@ -85,6 +86,7 @@
     "phantomjs-prebuilt": "^2.1.4",
     "pickadate": "3.5.3",
     "run-sequence": "^1.1.5",
+    "tmp": "0.0.28",
     "ts-loader": "^0.8.0",
     "tslint": "^3.2.0",
     "webpack": "^1.12.9",
