--- a/circle.yml
+++ b/circle.yml
@@ -36,8 +36,9 @@ deployment:
   release:
     branch: circleci
     commands:
-      - sudo chmod 755 build/scripts/check-version.sh
-      - build/scripts/check-version.sh --srcwd=$PWD
+      # check if tagged version == package version
+      - sudo chmod 755 ./build/scripts/check-version.sh
+      - ./build/scripts/check-version.sh --srcwd=$PWD
       - echo "got here"
       # pre
       # (0) if build failed ... ABORT
