add perm change to .sh

--- a/circle.yml
+++ b/circle.yml
@@ -37,7 +37,8 @@ deployment:
     branch: circleci
     commands:
       # change permission on scripts
-      #- sudo chmod 755 ./build/scripts/check-version.sh
+      - sudo chmod 755 ./build/scripts/check-version.sh
+
       # check if tagged version == package version
       - ./build/scripts/check-version.sh --srcwd=$PWD
 
