--- a/package.json
+++ b/package.json
@@ -95,7 +95,9 @@
     "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "1.7.0",
+    "phantomjs-polyfill": "0.0.2",
     "phantomjs-prebuilt": "2.1.7",
+    "phantomjs2-ext": "^0.2.2",
     "pickadate": "3.5.6",
     "run-sequence": "1.2.1",
     "ts-loader": "0.8.2",
