--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "run-sequence": "1.2.1",
     "ts-loader": "0.8.2",
     "tslint": "3.10.2",
+    "wallaby-webpack": "0.0.22",
     "webpack": "1.13.1",
     "webpack-stream": "3.2.0",
     "xmldom": "0.1.22",
