--- a/package.json
+++ b/package.json
@@ -99,10 +99,13 @@
     "angular-mocks": "1.5.8",
     "angular-sanitize": "1.5.8",
     "browser-sync": "2.18.5",
+    "canonical-path": "0.0.2",
     "chalk": "1.1.3",
     "commitizen": "2.9.2",
     "coveralls": "2.11.15",
     "cz-conventional-changelog": "1.2.0",
+    "dgeni": "^0.4.2",
+    "dgeni-packages": "^0.16.3",
     "eslint": "^3.12.2",
     "glob": "^7.1.1",
     "gulp": "3.9.1",
