--- a/package.json
+++ b/package.json
@@ -41,9 +41,12 @@
     "sharepoint"
   ],
   "scripts": {
-    "build": "npm run build:ts && npm run build:lib",
+    "build": "npm run build:ts && npm run build:lib && npm run build:docs",
     "build:ts": "tsc -p ./",
     "build:lib": "gulp build-lib && gulp build-lib --dev",
+    "build:docs": "rm -rf dist/docs && gulp docs && gulp docs-api",
+    "build:docs:content": "gulp docs-content",
+    "build:docs:api": "gulp docs-api",
     "test": "npm run build:ts && gulp test --specs",
     "commit": "git-cz"
   },
@@ -77,6 +80,7 @@
     "@types/jquery": "2.0.34",
     "@types/karma": "0.13.33",
     "@types/log4js": "0.0.32",
+    "@types/merge-stream": "^1.0.28",
     "@types/micromatch": "2.3.29",
     "@types/mime": "0.0.29",
     "@types/node": "6.0.52",
@@ -117,9 +121,10 @@
     "gulp-insert": "0.5.0",
     "gulp-istanbul": "1.1.1",
     "gulp-load-plugins": "1.4.0",
+    "gulp-markdown": "^1.2.0",
     "gulp-plumber": "1.1.0",
     "gulp-print": "2.0.1",
-    "gulp-rename": "1.2.2",
+    "gulp-rename": "^1.2.2",
     "gulp-rimraf": "0.2.1",
     "gulp-sourcemaps": "1.9.1",
     "gulp-strip-comments": "2.4.3",
@@ -128,6 +133,7 @@
     "gulp-typescript": "3.1.3",
     "gulp-uglify": "2.0.0",
     "gulp-util": "3.0.7",
+    "highlight.js": "^9.9.0",
     "istanbul": "0.4.5",
     "istanbul-instrumenter-loader": "1.1.0",
     "jasmine-core": "2.5.2",
@@ -143,6 +149,7 @@
     "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "1.8.0",
+    "merge-stream": "^1.0.1",
     "phantomjs-polyfill": "0.0.2",
     "phantomjs-prebuilt": "2.1.14",
     "phantomjs2-ext": "0.2.2",
