--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/angular": "1.5.20",
     "@types/angular-animate": "1.5.5",
     "@types/angular-mocks": "1.5.6",
+    "@types/angular-route": "^1.3.3",
     "@types/bluebird": "3.0.36",
     "@types/browser-sync": "0.0.34",
     "@types/chalk": "0.4.31",
@@ -101,6 +102,7 @@
     "@types/yargs": "6.3.3",
     "angular-animate": "1.5.8",
     "angular-mocks": "1.5.8",
+    "angular-route": "^1.6.1",
     "angular-sanitize": "1.5.8",
     "browser-sync": "2.18.5",
     "canonical-path": "0.0.2",
@@ -134,6 +136,7 @@
     "gulp-uglify": "2.0.0",
     "gulp-util": "3.0.7",
     "highlight.js": "^9.9.0",
+    "html-webpack-plugin": "^2.25.0",
     "istanbul": "0.4.5",
     "istanbul-instrumenter-loader": "1.1.0",
     "jasmine-core": "2.5.2",
